fix(searchbar): bug searchbar overlap

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -107,7 +107,7 @@
   display: none;
   margin-top: 0;
   padding: 20px;
-  position: fixed;
+  position: sticky;
   top: 96px;
   width: 100%;
   z-index: 90;
